cvpi_egl_config.h

/* Many of the EGL settings have a fixed number of possibilities. The
   Broadcom implementation uses #define statements for most of these
   options and their functions simply take integer types. Enums are
   used here to facilitate type checking.
*/


/** 
    All possible pixel formats for reading and writing image data. The
    default, cvpi_egl_ARGB_8888, is recommended because some CVPI functions
    work only with that pixel format. 
 */
enum cvpi_egl_pixel_format {
  cvpi_egl_ARGB_8888_PRE = EGL_PIXEL_FORMAT_ARGB_8888_PRE_BRCM,
  cvpi_egl_ARGB_8888     = EGL_PIXEL_FORMAT_ARGB_8888_BRCM,
  cvpi_egl_XRGB_8888     = EGL_PIXEL_FORMAT_XRGB_8888_BRCM,
  cvpi_egl_RGB_565       = EGL_PIXEL_FORMAT_RGB_565_BRCM,
  cvpi_egl_A_8           = EGL_PIXEL_FORMAT_A_8_BRCM
};
/** 
    Additional, undocumented settings that appear necessary to pass to
    eglCreateGlobalImageBRCM as part of its third argument.
*/
enum cvpi_egl_pixel_format_brcm {
  cvpi_egl_pixel_format_gles2_texture_brcm = EGL_PIXEL_FORMAT_GLES2_TEXTURE_BRCM,
  cvpi_egl_pixel_format_gles_texture_brcm = EGL_PIXEL_FORMAT_GLES_TEXTURE_BRCM,
  cvpi_egl_pixel_format_render_gles2_brcm = EGL_PIXEL_FORMAT_RENDER_GLES2_BRCM,
  cvpi_egl_pixel_format_render_gles_brcm  = EGL_PIXEL_FORMAT_RENDER_GLES_BRCM,
  cvpi_egl_pixel_format_render_gl_brcm    = EGL_PIXEL_FORMAT_RENDER_GL_BRCM,
  cvpi_egl_pixel_format_render_mask_brcm  = EGL_PIXEL_FORMAT_RENDER_MASK_BRCM,
  cvpi_egl_pixel_format_render_vg_brcm    = EGL_PIXEL_FORMAT_RENDER_VG_BRCM,
  cvpi_egl_pixel_format_texture_mask_brcm = EGL_PIXEL_FORMAT_TEXTURE_MASK_BRCM,
  cvpi_egl_pixel_format_usage_mask_brcm   = EGL_PIXEL_FORMAT_USAGE_MASK_BRCM,
  cvpi_egl_pixel_format_vg_image_brcm     = EGL_PIXEL_FORMAT_VG_IMAGE_BRCM,
  cvpi_egl_pixel_format_brcm_none = 0
};
/**  EGL_SURFACE_TYPE bitmask bits
 */
enum cvpi_egl_surface_bits {
  cvpi_egl_surface_bits_pbuffer = EGL_PBUFFER_BIT
  ,cvpi_egl_surface_bits_pixmap = EGL_PIXMAP_BIT
  ,cvpi_egl_surface_bits_window = EGL_WINDOW_BIT
  ,cvpi_egl_surface_bits_colorspace = EGL_VG_COLORSPACE_LINEAR_BIT
  ,cvpi_egl_surface_bits_alpha = EGL_VG_ALPHA_FORMAT_PRE_BIT
  ,cvpi_egl_surface_bits_multisample = EGL_MULTISAMPLE_RESOLVE_BOX_BIT
  ,cvpi_egl_surface_bits_swap = EGL_SWAP_BEHAVIOR_PRESERVED_BIT
  ,cvpi_egl_surface_bits_dc = EGL_DONT_CARE
};
/** EGL_RENDERABLE_TYPE bitmask bits
*/
enum cvpi_egl_renderable_bits {
  cvpi_egl_renderable_bits_opengl_es = EGL_OPENGL_ES_BIT
  ,cvpi_egl_renderable_bits_openvg = EGL_OPENVG_BIT
  ,cvpi_egl_renderable_bits_opengl_es2 = EGL_OPENGL_ES2_BIT
  /* OpenGL does not appear to be supported */
  ,cvpi_egl_renderable_bits_opengl = EGL_OPENGL_BIT
};
/* Allowed bit values for EGL_CONFORMANT, except for EGL_DONT_CARE
   which is not a bit value but an entire EGLint value. */
/* See userland/interface/khronos/egl/egl_client_config_cr.c case EGL_CONFORMANT: */
enum cvpi_egl_conformant_bits {
  cvpi_egl_conformant_bit_dc = EGL_DONT_CARE,
  cvpi_egl_conformant_bit_opengl = EGL_OPENGL_BIT,
  cvpi_egl_conformant_bit_opengl_es = EGL_OPENGL_ES_BIT,
  cvpi_egl_conformant_bit_opengl_es2 = EGL_OPENGL_ES2_BIT,
  cvpi_egl_conformant_bit_openvg = EGL_OPENVG_BIT
};
/** \struct cvpi_egl_settings

    \brief User set EGL parameters.

   Allowing client direct access to the struct. EGL required
   parameters are well defined and unlikely to change.  The user is
   responsible for destroying. Setting and sanity check functions are
   given below.

*/
struct cvpi_egl_settings_s {
  /* width and height may be required by the
     surface_pixmap_create_function or the
     surface_window_create_function, otherwise unused */
  unsigned long width;
  unsigned long height;	
  enum cvpi_egl_renderable_api renderable_api;
  enum cvpi_egl_current_surface_type current_surface_type;
  enum cvpi_egl_pixel_format pixel_format;
  EGLint pixel_format_brcm;	/* additional settings for eglCreateGlobalImageBRCM */

  /* display_id defaults to EGL_DEFAULT_DISPLAY. There no point in
     changing it because Broadcom's implementation only supports one
     display, according to egl_client.c */
  NativeDisplayType display_id;	

  /* pixmapSurface/pbufferSurface/windowSurface/eglCreateContext attribute list */
  /* The list must be structured similar to an association list, the
     attribute name followed by its value. The last element of the
     list must be EGL_NONE. The default value is NULL. */
  const EGLint *pixmap_surface_attrib_list;
  const EGLint *pbuffer_surface_attrib_list;
  const EGLint *window_surface_attrib_list;
  const EGLint *context_attrib_list;

  /* eglCreatePixmapSurface's and eglCreateWindowSurface's third
     arguments, pixmap and win respectively, are implementation
     dependent. The user must define how to get the pixmap and win. */
  EGLNativePixmapType (*surface_pixmap_create_function)(cvpi_egl_instance);
  EGLNativeWindowType (*surface_window_create_function)(cvpi_egl_instance);

  /* Functions to call when taking down an EGL instance to undo what
     was done by the surface_pixmap_create_function and
     surface_window_create_function. */
  EGLBoolean (*surface_pixmap_destroy_function)(cvpi_egl_instance);
  EGLBoolean (*surface_window_destroy_function)(cvpi_egl_instance);


  /** \defgroup Parameters from tables 3.1 and 3.4 in the EGL 1.4 spec. */
  EGLint buffer_size;
  EGLint red_size;
  EGLint green_size;
  EGLint blue_size;
  EGLint luminance_size;
  EGLint alpha_size;
  EGLint alpha_mask_size;
  enum CVPI_EGLBoolean bind_to_texture_rgb;
  enum CVPI_EGLBoolean bind_to_texture_rgba;
  /* EGL_COLOR_BUFFER_TYPE always EGL_RGB_BUFFER, from egl_client.c */
  enum cvpi_egl_color_buffer_type color_buffer_type;
  /* EGL_CONFIG_CAVEAT always EGL_NONE, from egl_client.c. */
  enum cvpi_egl_config_caveat config_caveat;
  EGLint config_id;
  EGLint conformant;
  EGLint depth_size;

  /* this setting appears ignored according to egl_client_config_cr.c */
  EGLint level;
  /* Pbuffer width and height are ignored by Broadcom's EGL implementation */
  EGLint max_pbuffer_width;
  EGLint max_pbuffer_height;

  /* this setting appears ignored according to egl_client_config_cr.c */
  EGLint max_pbuffer_pixels;

  /* Note: EGL_NONE is not supported by Broadcom's EGL
     implementation, but you can use EGL_DONT_CARE, see
     egl_client_config_cr.c case EGL_MATCH_NATIVE_PIXMAP: */
  EGLint match_native_pixmap;
  /* Min and Max swap interval are ignored by Broadcom's EGL implementation */
  EGLint max_swap_interval;
  EGLint min_swap_interval;

  /* From egl_client.c, this setting is always true, regardless. */
  enum CVPI_EGLBoolean native_renderable;

  /* native_visual_id and native_visual_type are ignored according
     to egl_client.c and egl_client_config_cr.c */
  EGLint native_visual_id;
  EGLint native_visual_type;
  EGLint renderable_type;
  EGLint sample_buffers;
  enum cvpi_egl_samples samples;
  EGLint stencil_size;
  EGLint surface_type;
  /* EGL_TRANSPARENT_TYPE is always none */
  enum cvpi_egl_transparent_type transparent_type;
  EGLint transparent_red_value;
  EGLint transparent_green_value;
  EGLint transparent_blue_value;
  /* end group */
};
typedef struct cvpi_egl_settings_s* cvpi_egl_settings;
/* For settings whose types cannot be enforced statically, the
   following functions allow the user to check and modify those
   settings. All of the functions return an integer greater than zero
   if successful, otherwise returning an integer <= 0 if unsucessful.
   */

/* For bitmap settings, modifying functions have a parameter to
   specify whether to add or remove a particular bit. */
enum cvpi_egl_settings_change {cvpi_egl_settings_add, cvpi_egl_settings_remove};
/* Runs all of the check functions. */
CVPI_BOOL cvpi_egl_settings_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_width(cvpi_egl_settings, unsigned long width);
CVPI_BOOL cvpi_egl_settings_width_check(unsigned long width);
CVPI_BOOL cvpi_egl_settings_height(cvpi_egl_settings, unsigned long height);
CVPI_BOOL cvpi_egl_settings_height_check(unsigned long width);
CVPI_BOOL cvpi_egl_settings_pixel_format_brcm_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_pixel_format_brcm(cvpi_egl_settings, 
					      enum cvpi_egl_pixel_format_brcm pixel_format_brcm,
					      enum cvpi_egl_settings_change);
CVPI_BOOL cvpi_egl_surface_functions_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_buffer_size_check(EGLint buffer_size);
CVPI_BOOL cvpi_egl_settings_buffer_size(cvpi_egl_settings, EGLint buffer_size);
CVPI_BOOL cvpi_egl_settings_red_size_check(EGLint red_size);
CVPI_BOOL cvpi_egl_settings_red_size(cvpi_egl_settings, EGLint red_size);
CVPI_BOOL cvpi_egl_settings_green_size_check(EGLint green_size);
CVPI_BOOL cvpi_egl_settings_green_size(cvpi_egl_settings, EGLint green_size);
CVPI_BOOL cvpi_egl_settings_blue_size_check(EGLint blue_size);
CVPI_BOOL cvpi_egl_settings_blue_size(cvpi_egl_settings, EGLint blue_size);
CVPI_BOOL cvpi_egl_settings_alpha_size_check(EGLint alpha_size);
CVPI_BOOL cvpi_egl_settings_alpha_size(cvpi_egl_settings, EGLint alpha_size);
CVPI_BOOL cvpi_egl_settings_alpha_mask_size_check(EGLint alpha_size);
CVPI_BOOL cvpi_egl_settings_alpha_mask_size(cvpi_egl_settings, EGLint alpha_size);
CVPI_BOOL cvpi_egl_settings_config_id_check(EGLint id);
CVPI_BOOL cvpi_egl_settings_config_id(cvpi_egl_settings, EGLint id);
CVPI_BOOL cvpi_egl_settings_conformant_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_conformant(cvpi_egl_settings,
				       enum cvpi_egl_conformant_bits bit,
				       enum cvpi_egl_settings_change change);
CVPI_BOOL cvpi_egl_settings_depth_size_check(EGLint depth_size);
CVPI_BOOL cvpi_egl_settings_depth_size(cvpi_egl_settings, EGLint depth_size);
CVPI_BOOL cvpi_egl_settings_max_pbuffer_width_check(EGLint width);
CVPI_BOOL cvpi_egl_settings_max_pbuffer_height_check(EGLint height);
CVPI_BOOL cvpi_egl_settings_max_pbuffer_pixels_check(EGLint pixels);
CVPI_BOOL cvpi_egl_settings_match_native_pixmap_check(EGLint match_native_pixmap);
CVPI_BOOL cvpi_egl_settings_max_swap_interval_check(EGLint interval);
CVPI_BOOL cvpi_egl_settings_max_swap_interval(cvpi_egl_settings, EGLint interval);
CVPI_BOOL cvpi_egl_settings_min_swap_interval_check(EGLint interval);
CVPI_BOOL cvpi_egl_settings_min_swap_interval(cvpi_egl_settings, EGLint interval);
CVPI_BOOL cvpi_egl_settings_renderable_type_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_renderable_type(cvpi_egl_settings,
					    enum cvpi_egl_renderable_bits bit,
					    enum cvpi_egl_settings_change change);
CVPI_BOOL cvpi_egl_settings_stencil_size_check(EGLint size);
CVPI_BOOL cvpi_egl_settings_stencil_size(cvpi_egl_settings, EGLint size);
CVPI_BOOL cvpi_egl_settings_surface_type_check(cvpi_egl_settings);
CVPI_BOOL cvpi_egl_settings_surface_type(cvpi_egl_settings,
					 enum cvpi_egl_surface_bits bit,
					 enum cvpi_egl_settings_change change);
CVPI_BOOL cvpi_egl_settings_transparent_red_value_check(EGLint red_value);
CVPI_BOOL cvpi_egl_settings_transparent_red_value(cvpi_egl_settings, EGLint red_value);
CVPI_BOOL cvpi_egl_settings_transparent_green_value_check(EGLint green_value);
CVPI_BOOL cvpi_egl_settings_transparent_green_value(cvpi_egl_settings, EGLint green_value);
CVPI_BOOL cvpi_egl_settings_transparent_blue_value_check(EGLint blue_value);
CVPI_BOOL cvpi_egl_settings_transparent_blue_value(cvpi_egl_settings, EGLint blue_value);
/* Given an EGL error number, such as one produced by eglGetError(),
   return a string describing it. */
char* cvpi_egl_error_string(EGLint);
EGLint cvpi_egl_bytes_per_pixel(enum cvpi_egl_pixel_format);