cvpi_image_functions.h

typedef union {
  VGuint all;
  VGubyte channel[4];
} cvpi_pixel;