bindings/chicken/cvpi/cvpi.scm


(define cvpi_egl_settings_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_check" cvpi_egl_settings))
(define cvpi_egl_settings_width (foreign-lambda CVPI_BOOL "cvpi_egl_settings_width" cvpi_egl_settings unsigned-long))
(define cvpi_egl_settings_width_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_width_check" unsigned-long))
(define cvpi_egl_settings_height (foreign-lambda CVPI_BOOL "cvpi_egl_settings_height" cvpi_egl_settings unsigned-long))
(define cvpi_egl_settings_height_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_height_check" unsigned-long))
;; cpp-if
(conditional-code (eq? 1 HAVE_BCM_HOST)
		  (define cvpi_egl_settings_pixel_format_brcm_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_pixel_format_brcm_check" cvpi_egl_settings))
		  (define cvpi_egl_settings_pixel_format_brcm 
		    (lambda (settings pixel_format_brcm change)
		      (let ((pf (int->cvpi_egl_pixel_format_brcm pixel_format_brcm pixel_format_brcm))
			    (c (int->cvpi_egl_settings_change change)))
			((foreign-lambda CVPI_BOOL "cvpi_egl_settings_pixel_format_brcm"
					 cvpi_egl_settings cvpi_egl_pixel_format_brcm cvpi_egl_settings_change)
			 settings pf c))))
		  (define cvpi_egl_bytes_per_pixel
		    (lambda (format)
		      (let ((f (int->cvpi_egl_pixel_format format)))
			((foreign-lambda EGLint "cvpi_egl_bytes_per_pixel" cvpi_egl_pixel_format) f))))
		  (define cvpi_egl_settings_renderable_type_check
		    (foreign-lambda CVPI_BOOL "cvpi_egl_settings_renderable_type_check" cvpi_egl_settings)))
(define cvpi_egl_surface_functions_check (foreign-lambda CVPI_BOOL "cvpi_egl_surface_functions_check" cvpi_egl_settings))
(define cvpi_egl_settings_buffer_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_buffer_size_check" EGLint))
(define cvpi_egl_settings_buffer_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_buffer_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_red_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_red_size_check" EGLint))
(define cvpi_egl_settings_red_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_red_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_green_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_green_size_check" EGLint))
(define cvpi_egl_settings_green_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_green_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_blue_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_blue_size_check" EGLint))
(define cvpi_egl_settings_blue_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_blue_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_alpha_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_alpha_size_check" EGLint))
(define cvpi_egl_settings_alpha_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_alpha_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_alpha_mask_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_alpha_mask_size_check" EGLint))
(define cvpi_egl_settings_alpha_mask_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_alpha_mask_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_config_id_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_config_id_check" EGLint))
(define cvpi_egl_settings_config_id (foreign-lambda CVPI_BOOL "cvpi_egl_settings_config_id" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_conformant_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_conformant_check" cvpi_egl_settings))
(define cvpi_egl_settings_conformant
  (lambda (settings bit change)
    (let ((b (int->cvpi_egl_conformant_bits bit)) (c (int->cvpi_egl_settings_change change)))
      ((foreign-lambda CVPI_BOOL "cvpi_egl_settings_conformant" cvpi_egl_settings cvpi_egl_conformant_bits cvpi_egl_settings_change)
       settings b c))))
(define cvpi_egl_settings_depth_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_depth_size_check" EGLint))
(define cvpi_egl_settings_depth_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_depth_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_max_pbuffer_width_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_max_pbuffer_width_check" EGLint))
(define cvpi_egl_settings_max_pbuffer_height_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_max_pbuffer_height_check" EGLint))
(define cvpi_egl_settings_max_pbuffer_pixels_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_max_pbuffer_pixels_check" EGLint))
(define cvpi_egl_settings_match_native_pixmap_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_match_native_pixmap_check" EGLint))
(define cvpi_egl_settings_max_swap_interval_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_max_swap_interval_check" EGLint))
(define cvpi_egl_settings_max_swap_interval (foreign-lambda CVPI_BOOL "cvpi_egl_settings_max_swap_interval" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_min_swap_interval_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_min_swap_interval_check" EGLint))
(define cvpi_egl_settings_min_swap_interval (foreign-lambda CVPI_BOOL "cvpi_egl_settings_min_swap_interval" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_renderable_type 
  (lambda (settings bit change)
    (let ((b (int->cvpi_egl_renderable_bits bit))
	  (c (int->cvpi_egl_settings_change change)))
      ((foreign-lambda CVPI_BOOL "cvpi_egl_settings_renderable_type"
		       cvpi_egl_settings cvpi_egl_renderable_bits cvpi_egl_settings_change)
       settings b c))))
(define cvpi_egl_settings_stencil_size_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_stencil_size_check" EGLint))
(define cvpi_egl_settings_stencil_size (foreign-lambda CVPI_BOOL "cvpi_egl_settings_stencil_size" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_surface_type_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_surface_type_check" cvpi_egl_settings))
(define cvpi_egl_settings_surface_type 
  (lambda (settings bit change)
    (let ((b (int->cvpi_egl_surface_bits bit))
	  (c (int->cvpi_egl_settings_change change)))
      ((foreign-lambda CVPI_BOOL "cvpi_egl_settings_surface_type" 
		       cvpi_egl_settings cvpi_egl_surface_bits cvpi_egl_settings_change)
       settings b c))))
(define cvpi_egl_settings_transparent_red_value_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_red_value_check" EGLint))
(define cvpi_egl_settings_transparent_red_value (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_red_value" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_transparent_green_value_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_green_value_check" EGLint))
(define cvpi_egl_settings_transparent_green_value (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_green_value" cvpi_egl_settings EGLint))
(define cvpi_egl_settings_transparent_blue_value_check (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_blue_value_check" EGLint))
(define cvpi_egl_settings_transparent_blue_value (foreign-lambda CVPI_BOOL "cvpi_egl_settings_transparent_blue_value" cvpi_egl_settings EGLint))
(define cvpi_egl_error_string (foreign-lambda c-string "cvpi_egl_error_string" EGLint))

;;; cvpi_image_headers.h
(define-foreign-type cvpi_dword unsigned-integer32)
(define-foreign-type cvpi_word unsigned-short)
(define-foreign-type cvpi_long integer32)

(define-foreign-enum-type (cvpi_bmp_pixel_format int cvpi_bmp_sARGB_8888)
  (cvpi_bmp_pixel_format->int int->cvpi_bmp_pixel_format)
  cvpi_bmp_sRGB_565
  cvpi_bmp_sBGR_565
  cvpi_bmp_sXRGB_8888
  cvpi_bmp_sXBGR_8888
  cvpi_bmp_sARGB_8888
  cvpi_bmp_sBGRA_8888
  cvpi_bmp_sRGBA_8888)

(define cvpi_bmp_header_write
  (lambda (file-handle width height ppm pixel-format)
    (let ((pf (int->cvpi_bmp_pixel_format pixel-format))) 
      ((foreign-lambda void "cvpi_bmp_header_write"
		       c-pointer cvpi_long cvpi_long cvpi_dword cvpi_bmp_pixel_format)
       file-handle width height ppm pf))))

(define cvpi_pbm_header_write (foreign-lambda void "cvpi_pbm_header_write" c-pointer unsigned-long unsigned-long))
(define cvpi_pgm_header_write (foreign-lambda void "cvpi_pgm_header_write" c-pointer unsigned-long unsigned-long unsigned-char))

;;; cvpi_vg_ext.h
(define vgConvolveNormal
  (lambda (dst src kernelW KernelH shiftX shiftY kernel scale bias tilingMode)
    (let ((tm (int->VGTilingMode tilingMode)))
      ((foreign-lambda void "vgConvolveNormal"
		       VGImage VGImage VGint VGint VGint VGint (const VGshort-vector)
		       VGfloat unsigned-char VGTilingMode)
       dst src kernelW KernelH shiftX shiftY kernel scale bias tm))))
(define vgSeparableConvolveNormal
  (lambda (dst src kernelW KernelH shiftX shiftY kernelX kernelY scale bias tilingMode)
    (let ((tm (int->VGTilingMode tilingMode)))
      ((foreign-lambda void "vgSeparableConvolveNormal"
		       VGImage VGImage VGint VGint VGint VGint (const VGshort-vector)
		       (const VGshort-vector) VGfloat unsigned-char VGTilingMode) 
       dst src kernelW KernelH shiftX shiftY kernelX kernelY scale bias tm))))
(define vgColorMatrixNormal (foreign-lambda void "vgColorMatrixNormal" VGImage VGImage (const VGfloat-vector)))
(define vgCreateImagePainted 
  (lambda (fmt width height quality red green blue alpha)
    (let ((format (int->VGImageFormat fmt)))
      ((foreign-lambda VGImage "vgCreateImagePainted" 
		       VGImageFormat VGint VGint VGbitfield unsigned-char unsigned-char unsigned-char unsigned-char)
       format width height quality red green blue alpha))))
(define vgPixelBits
  (lambda (format)
    (let ((fmt (int->VGImageFormat format)))
      ((foreign-lambda VGint "vgPixelBits" VGImageFormat)
       fmt))))

;;; cvpi_image_functions.h
(define-foreign-type cvpi_pixel (union "cvpi_pixel"))
